fix on content alignment

--- a/source/assets/stylesheets/scss/_campaign.scss
+++ b/source/assets/stylesheets/scss/_campaign.scss
@@ -242,7 +242,7 @@ h1.main-caption {
         text-align: center;
         font-size: 3em;
     }
-    .content {
+    .content_101 {
         margin-bottom: 2em;
     }
     .cta {
